--- a/views/emergency_user.html
+++ b/views/emergency_user.html
@@ -223,20 +223,33 @@
 					<script src="https://www.gstatic.com/firebasejs/7.9.3/firebase-storage.js"></script>
 
 					<script>
-						// Your web app's Firebase configuration
 						var firebaseConfig = {
-							apiKey: "AIzaSyCEvPHsE99y0sTccqPpbTMrpzxsvIo8d3c",
-							authDomain: "crime-scene-bcbf1.firebaseapp.com",
-							databaseURL: "https://crime-scene-bcbf1.firebaseio.com",
-							projectId: "crime-scene-bcbf1",
-							storageBucket: "crime-scene-bcbf1.appspot.com",
-							messagingSenderId: "1000042167224",
-							appId: "1:1000042167224:web:0d809f9f1e27ca63bd6d4d",
-							measurementId: "G-24KDJT144S"
+							apiKey: "AIzaSyBkQD5sCLFS3Z1bYVwbx4TIE2QPn7XojAw",
+							authDomain: "crime-scene-6af89.firebaseapp.com",
+							databaseURL: "https://crime-scene-6af89.firebaseio.com",
+							projectId: "crime-scene-6af89",
+							storageBucket: "crime-scene-6af89.appspot.com",
+							messagingSenderId: "547210952838",
+							appId: "1:547210952838:web:c8026988c71e3faa205107",
+							measurementId: "G-6L4KGZQBEY"
 						};
 						// Initialize Firebase
 						firebase.initializeApp(firebaseConfig);
 						firebase.analytics();
+						// // Your web app's Firebase configuration
+						// var firebaseConfig = {
+						// 	apiKey: "AIzaSyCEvPHsE99y0sTccqPpbTMrpzxsvIo8d3c",
+						// 	authDomain: "crime-scene-bcbf1.firebaseapp.com",
+						// 	databaseURL: "https://crime-scene-bcbf1.firebaseio.com",
+						// 	projectId: "crime-scene-bcbf1",
+						// 	storageBucket: "crime-scene-bcbf1.appspot.com",
+						// 	messagingSenderId: "1000042167224",
+						// 	appId: "1:1000042167224:web:0d809f9f1e27ca63bd6d4d",
+						// 	measurementId: "G-24KDJT144S"
+						// };
+						// // Initialize Firebase
+						// firebase.initializeApp(firebaseConfig);
+						// firebase.analytics();
 
 
 
