--- a/views/index.html
+++ b/views/index.html
@@ -152,7 +152,7 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
                 <a class="navbar-brand" href="index.html">
-                    <img src="/static/images/logo-hosting.png" alt="" />
+                    <!-- <img src="/static/images/logo-hosting.png" alt="" /> -->
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbars-host"
                     aria-controls="navbars-rs-food" aria-expanded="false" aria-label="Toggle navigation">
@@ -203,12 +203,12 @@
         <div class="carousel-inner" role="listbox">
 
             <div class="carousel-item">
-                <div id="home" class="first-section" style="background-image:url('/static/images/slider-02.jpg');">
-                    <div class="dtab">
+                <div id="home" class="first-section" style="background-image:url('/static/images/pic1.jpg');">
+                    <div class="dtab"> 
                         <div class="container">
                             <div class="row">
                                 <div class="col-md-12 col-sm-12 text-center">
-                                    <div class="big-tagline">
+                                    <!-- <div class="big-tagline">
                                         <h2 data-animation="animated zoomInRight"><strong>VPS Servers</strong> Company
                                         </h2>
                                         <p class="lead" data-animation="animated fadeInLeft">1 IP included with each
@@ -218,32 +218,32 @@
                                         <a href="#" class="hover-btn-new"><span>Contact Us</span></a>
                                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                                         <a href="#" class="hover-btn-new"><span>Read More</span></a>
-                                    </div>
+                                    </div> -->
                                 </div>
-                            </div><!-- end row -->
-                        </div><!-- end container -->
+                            </div>
+                        </div>
                     </div>
                 </div><!-- end section -->
             </div>
 
 
             <div class="carousel-item active">
-                <div id="home" class="first-section" style="background-image:url('/static/images/slider-01.jpg');">
+                <div id="home" class="first-section" style="background-image:url('/static/images/pic2.jpg');">
                     <div class="dtab">
                         <div class="container">
                             <div class="row">
                                 <div class="col-md-12 col-sm-12 text-right">
-                                    <div class="big-tagline">
+                                    <!-- <div class="big-tagline">
                                         <h2><strong>Shared Hosting</strong> Company</h2>
                                         <p class="lead">With Landigoo responsive landing page template, you can promote
                                             your all hosting, domain and email services. </p>
                                         <a href="#" class="hover-btn-new"><span>Contact Us</span></a>
                                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                                         <a href="#" class="hover-btn-new"><span>Read More</span></a>
-                                    </div>
+                                    </div> -->
                                 </div>
-                            </div><!-- end row -->
-                        </div><!-- end container -->
+                            </div>
+                        </div>
                     </div>
                 </div><!-- end section -->
             </div>
@@ -775,9 +775,9 @@
                         </div>
 
                         <ul class="footer-links">
-                            <li><a href="mailto:#">info@yoursite.com</a></li>
-                            <li><a href="#">www.yoursite.com</a></li>
-                            <li>PO Box 16122 Collins Street West Victoria 8007 Australia</li>
+                            <li><a href="mailto:#">digipolice@gmail.com</a></li>
+                            <li><a href="#">www.digipolice.com</a></li>
+                            <li>PO Box 16122 Collins Street West Victoria 8007 Kerala</li>
                             <li>+61 3 8376 6284</li>
                         </ul><!-- end links -->
                     </div><!-- end clearfix -->
