--- a/views/index_admin.html
+++ b/views/index_admin.html
@@ -179,12 +179,12 @@
 		<div class="carousel-inner" role="listbox">
 		
 			<div class="carousel-item">
-				<div id="home" class="first-section" style="background-image:url('/static/images/slider-02.jpg');">
+				<div id="home" class="first-section" style="background-image:url('/static/images/pic1.jpg');">
 					<div class="dtab">
 						<div class="container">
 							<div class="row">
 								<div class="col-md-12 col-sm-12 text-center">
-									<div class="big-tagline">
+									<!-- <div class="big-tagline">
 										<h2 data-animation="animated zoomInRight"><strong>VPS Servers</strong> Company</h2>
 										<p class="lead" data-animation="animated fadeInLeft">1 IP included with each server 
 											Your Choice of any OS (CentOS, Windows, Debian, Fedora)
@@ -192,7 +192,7 @@
 											<a href="#" class="hover-btn-new"><span>Contact Us</span></a>
 											&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 											<a href="#" class="hover-btn-new"><span>Read More</span></a>
-									</div>
+									</div> -->
 								</div>
 							</div><!-- end row -->            
 						</div><!-- end container -->
@@ -202,18 +202,18 @@
 			
 			
 			<div class="carousel-item active">
-				<div id="home" class="first-section" style="background-image:url('/static/images/slider-01.jpg');">
+				<div id="home" class="first-section" style="background-image:url('/static/images/pic2.jpg');">
 					<div class="dtab">
 						<div class="container">
 							<div class="row">
 								<div class="col-md-12 col-sm-12 text-right">
-									<div class="big-tagline">
+									<!-- <div class="big-tagline">
 										<h2><strong>Shared Hosting</strong> Company</h2>
 										<p class="lead">With Landigoo responsive landing page template, you can promote your all hosting, domain and email services. </p>
 											<a href="#" class="hover-btn-new"><span>Contact Us</span></a>
 											&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 											<a href="#" class="hover-btn-new"><span>Read More</span></a>
-									</div>
+									</div> -->
 								</div>
 							</div><!-- end row -->            
 						</div><!-- end container -->
@@ -805,6 +805,7 @@
         //To fetch current user's name 
         request('GET','http://localhost:8080/fetchcurrentuser').then(function(res){
             document.getElementById('username_head').innerHTML = 'Welcome '+res.body
+            document.getElementById('username_head').style.color = '#ffffff'
         })
 
         function emergency() {
