--- a/views/my_cases_user.html
+++ b/views/my_cases_user.html
@@ -144,10 +144,10 @@
 				</button>
 				<div class="collapse navbar-collapse" id="navbars-host">
 					<ul class="navbar-nav ml-auto">
-                        <li class="nav-item"><a class="nav-link" onclick="index()">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" onclick="info_zone()">Information Zone</a></li>
+						<li class="nav-item"><a class="nav-link" onclick="index()">Home</a></li>
+						<li class="nav-item"><a class="nav-link" onclick="info_zone()">Information Zone</a></li>
 						<li class="nav-item active"><a class="nav-link" onclick="my_cases()">My Cases</a></li>
-                        <li class="nav-item"><a class="nav-link" onclick="upload_cases()">Upload Cases</a></li>
+						<li class="nav-item"><a class="nav-link" onclick="upload_cases()">Upload Cases</a></li>
 						<li class="nav-item"><a class="nav-link" onclick="contact()">Contact</a></li>
 						<!--<li class="nav-item dropdown">
 							<a class="nav-link dropdown-toggle" href="#" id="dropdown-a" data-toggle="dropdown">Hosting </a>
@@ -197,16 +197,16 @@
 				document.write(res.body)
 				document.close()
 			})
-        }
-        
-        function info_zone(){
-            request('GET', 'http://localhost:8080/info_zone_user').then(function (res) {
+		}
+
+		function info_zone() {
+			request('GET', 'http://localhost:8080/info_zone_user').then(function (res) {
 				// document.body(res)
 				document.open()
 				document.write(res.body)
 				document.close()
 			})
-        }
+		}
 
 		function index() {
 			// window.location.href = 'http://localhost:8080/info_zone'
@@ -226,16 +226,16 @@
 				document.write(res.body)
 				document.close()
 			})
-        }
-        
-        function contact(){
-            request('GET', 'http://localhost:8080/contact_user').then(function (res) {
+		}
+
+		function contact() {
+			request('GET', 'http://localhost:8080/contact_user').then(function (res) {
 				// document.body(res)
 				document.open()
 				document.write(res.body)
 				document.close()
 			})
-        }
+		}
 	</script>
 
 	<script src="https://www.gstatic.com/firebasejs/7.9.3/firebase-app.js"></script>
@@ -246,32 +246,45 @@
 
 	<script>
 
-		// Your web app's Firebase configuration
 		var firebaseConfig = {
-			apiKey: "AIzaSyCEvPHsE99y0sTccqPpbTMrpzxsvIo8d3c",
-			authDomain: "crime-scene-bcbf1.firebaseapp.com",
-			databaseURL: "https://crime-scene-bcbf1.firebaseio.com",
-			projectId: "crime-scene-bcbf1",
-			storageBucket: "crime-scene-bcbf1.appspot.com",
-			messagingSenderId: "1000042167224",
-			appId: "1:1000042167224:web:0d809f9f1e27ca63bd6d4d",
-			measurementId: "G-24KDJT144S"
+			apiKey: "AIzaSyBkQD5sCLFS3Z1bYVwbx4TIE2QPn7XojAw",
+			authDomain: "crime-scene-6af89.firebaseapp.com",
+			databaseURL: "https://crime-scene-6af89.firebaseio.com",
+			projectId: "crime-scene-6af89",
+			storageBucket: "crime-scene-6af89.appspot.com",
+			messagingSenderId: "547210952838",
+			appId: "1:547210952838:web:c8026988c71e3faa205107",
+			measurementId: "G-6L4KGZQBEY"
 		};
 		// Initialize Firebase
 		firebase.initializeApp(firebaseConfig);
 		firebase.analytics();
+		// // Your web app's Firebase configuration
+		// var firebaseConfig = {
+		// 	apiKey: "AIzaSyCEvPHsE99y0sTccqPpbTMrpzxsvIo8d3c",
+		// 	authDomain: "crime-scene-bcbf1.firebaseapp.com",
+		// 	databaseURL: "https://crime-scene-bcbf1.firebaseio.com",
+		// 	projectId: "crime-scene-bcbf1",
+		// 	storageBucket: "crime-scene-bcbf1.appspot.com",
+		// 	messagingSenderId: "1000042167224",
+		// 	appId: "1:1000042167224:web:0d809f9f1e27ca63bd6d4d",
+		// 	measurementId: "G-24KDJT144S"
+		// };
+		// // Initialize Firebase
+		// firebase.initializeApp(firebaseConfig);
+		// firebase.analytics();
 		var firestore = firebase.storage()
 		var storageRef = firestore.ref()
 
 		request('GET', 'http://localhost:8080/fetchcases_individual').then(function (res) {
-            console.log(res.body)
-            
-            var cases = JSON.parse(res.body)
-            var keys = Object.keys(cases)
-            for(var i = 0; i<keys.length; i++){
-                console.log(cases[keys[i]])
-                showNotice(cases[keys[i]].filename,cases[keys[i]]['location'],cases[keys[i]].description,true,cases[keys[i]].status)
-            }
+			console.log(res.body)
+
+			var cases = JSON.parse(res.body)
+			var keys = Object.keys(cases)
+			for (var i = 0; i < keys.length; i++) {
+				console.log(cases[keys[i]])
+				showNotice(cases[keys[i]].filename, cases[keys[i]]['location'], cases[keys[i]].description, true, cases[keys[i]].status)
+			}
 
 			// var cases = JSON.parse(res.body);
 			// var keys = Object.keys(cases)
@@ -290,7 +303,7 @@
 			// 		var description = obj[obj_keys[j]].description
 			// 		showNotice(file_name,location_,description,keys[i])
 			// 	}
-				
+
 			// 	// var file_name = notices[keys[i]].file_name
 			// 	// var person_name = notices[keys[i]].person_name
 			// 	// var notice_type = notices[keys[i]].notice_type
@@ -301,8 +314,8 @@
 			// console.log("Number of keys:"+Object.keys(json).length)
 		})
 
-		function showNotice(file_name, location_, description,registered,status) {
-			console.log('Inside shownotice:'+file_name+","+location_+","+registered)
+		function showNotice(file_name, location_, description, registered, status) {
+			console.log('Inside shownotice:' + file_name + "," + location_ + "," + registered)
 			var hr_ = document.createElement('hr')
 			hr_.className = 'invis'
 			hr_.style.margin = '10px 10px 10px 10px'
@@ -314,45 +327,45 @@
 			var div3 = document.createElement('div')
 			div3.className = 'icon-wrapper wow fadeIn'
 			div2.appendChild(div3)
-			
+
 
 			var img_path
-			if(registered == 0)
-			img_path = 'images/guest/'+file_name
+			if (registered == 0)
+				img_path = 'images/guest/' + file_name
 			else
-			img_path = 'images/user/'+file_name
+				img_path = 'images/user/' + file_name
 
 			storageRef.child(img_path).getDownloadURL().then(function (url) {
-			var elem = document.createElement('img')
-			elem.setAttribute("height", "300");
-			elem.setAttribute("width", "300");
-			elem.setAttribute('src', url)
-			div3.appendChild(elem)
-			
-            var h3 = document.createElement('h3')
-			h3.innerHTML = 'Location: '+location_
-            div3.appendChild(h3)
-            
-			var h4 = document.createElement('h3')
-			h4.innerHTML = 'Case description: '+description
-            div3.appendChild(h4)
-            
-            var stat = document.createElement('h3')
-            if(status == 'ongoing')
-            stat.innerHTML = 'Case status: Investigation Ongoing'
-            else if(status == 'rejected')
-            stat.innerHTML = 'Case status: Case Rejected'
-            if(status == 'pending')
-            stat.innerHTML = 'Case status: Case yet to be accepted'
-            if(status == 'closed')
-            stat.innerHTML = 'Case status: Investigation Completed'
-            div3.appendChild(stat)
+				var elem = document.createElement('img')
+				elem.setAttribute("height", "300");
+				elem.setAttribute("width", "300");
+				elem.setAttribute('src', url)
+				div3.appendChild(elem)
 
-			document.body.appendChild(main_div)
+				var h3 = document.createElement('h3')
+				h3.innerHTML = 'Location: ' + location_
+				div3.appendChild(h3)
 
-			
-			// main_div.appendChild(elem)
-		})
+				var h4 = document.createElement('h3')
+				h4.innerHTML = 'Case description: ' + description
+				div3.appendChild(h4)
+
+				var stat = document.createElement('h3')
+				if (status == 'ongoing')
+					stat.innerHTML = 'Case status: Investigation Ongoing'
+				else if (status == 'rejected')
+					stat.innerHTML = 'Case status: Case Rejected'
+				if (status == 'pending')
+					stat.innerHTML = 'Case status: Case yet to be accepted'
+				if (status == 'closed')
+					stat.innerHTML = 'Case status: Investigation Completed'
+				div3.appendChild(stat)
+
+				document.body.appendChild(main_div)
+
+
+				// main_div.appendChild(elem)
+			})
 		}
 
 
@@ -364,12 +377,12 @@
 		// main_div.style.background = "red";
 		// main_div.style.color = "white";
 
-		
-		function logout(){
-            window.location.href = "http://localhost:8080/index"
-        }
 
-		
+		function logout() {
+			window.location.href = "http://localhost:8080/index"
+		}
+
+
 
 	</script>
 
