--- a/views/upload_cases.html
+++ b/views/upload_cases.html
@@ -133,7 +133,8 @@
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
 			<div class="container-fluid">
 				<h1><strong>
-						<font color="white">Welcome Admin</font><!--ivide lotha police inte name veranam not admin--> 
+						<font color="white">Welcome Admin</font>
+						<!--ivide lotha police inte name veranam not admin-->
 					</strong></h1>
 				<!--<a class="navbar-brand" href="index.html">
 					<img src="images/logo-hosting.png" alt="" />
@@ -352,20 +353,33 @@
 	<script src="https://www.gstatic.com/firebasejs/7.9.3/firebase-storage.js"></script>
 
 	<script>
-		// Your web app's Firebase configuration
 		var firebaseConfig = {
-			apiKey: "AIzaSyCEvPHsE99y0sTccqPpbTMrpzxsvIo8d3c",
-			authDomain: "crime-scene-bcbf1.firebaseapp.com",
-			databaseURL: "https://crime-scene-bcbf1.firebaseio.com",
-			projectId: "crime-scene-bcbf1",
-			storageBucket: "crime-scene-bcbf1.appspot.com",
-			messagingSenderId: "1000042167224",
-			appId: "1:1000042167224:web:0d809f9f1e27ca63bd6d4d",
-			measurementId: "G-24KDJT144S"
+			apiKey: "AIzaSyBkQD5sCLFS3Z1bYVwbx4TIE2QPn7XojAw",
+			authDomain: "crime-scene-6af89.firebaseapp.com",
+			databaseURL: "https://crime-scene-6af89.firebaseio.com",
+			projectId: "crime-scene-6af89",
+			storageBucket: "crime-scene-6af89.appspot.com",
+			messagingSenderId: "547210952838",
+			appId: "1:547210952838:web:c8026988c71e3faa205107",
+			measurementId: "G-6L4KGZQBEY"
 		};
 		// Initialize Firebase
 		firebase.initializeApp(firebaseConfig);
 		firebase.analytics();
+		// // Your web app's Firebase configuration
+		// var firebaseConfig = {
+		// 	apiKey: "AIzaSyCEvPHsE99y0sTccqPpbTMrpzxsvIo8d3c",
+		// 	authDomain: "crime-scene-bcbf1.firebaseapp.com",
+		// 	databaseURL: "https://crime-scene-bcbf1.firebaseio.com",
+		// 	projectId: "crime-scene-bcbf1",
+		// 	storageBucket: "crime-scene-bcbf1.appspot.com",
+		// 	messagingSenderId: "1000042167224",
+		// 	appId: "1:1000042167224:web:0d809f9f1e27ca63bd6d4d",
+		// 	measurementId: "G-24KDJT144S"
+		// };
+		// // Initialize Firebase
+		// firebase.initializeApp(firebaseConfig);
+		// firebase.analytics();
 
 		function upload_missing() {
 			var name = document.getElementById('name_missing').value
@@ -385,22 +399,22 @@
 			var req = new XMLHttpRequest()
 			req.open("POST", 'http://localhost:8080/add_notice', true)
 			req.setRequestHeader("Content-Type", "application/json");
-			var data = JSON.stringify({ 'person_name':name,'file_name':filename,'up_location':locn, 'notice_type':'missing' })
+			var data = JSON.stringify({ 'person_name': name, 'file_name': filename, 'up_location': locn, 'notice_type': 'missing' })
 			req.onreadystatechange = (function () {
 				if (req.readyState === 4 && req.status === 200) {
 					var resp = req.responseText
 					console.log(resp)
-					if(resp == 'uploaded notice')
-					upload_cases()
+					if (resp == 'uploaded notice')
+						upload_cases()
 					else
-					alert("Upload failed")
+						alert("Upload failed")
 				}
 			})
 			console.log(data)
 			req.send(data)
 		}
 
-		function upload_wanted(){
+		function upload_wanted() {
 			var name = document.getElementById('name_wanted').value
 			var bounty = document.getElementById('bounty_wanted').value
 			var photo = document.getElementById('image_wanted').files[0]
@@ -418,15 +432,15 @@
 			var req = new XMLHttpRequest()
 			req.open("POST", 'http://localhost:8080/add_notice', true)
 			req.setRequestHeader("Content-Type", "application/json");
-			var data = JSON.stringify({ 'person_name':name,'file_name':filename,'bounty':bounty, 'notice_type':'wanted' })
+			var data = JSON.stringify({ 'person_name': name, 'file_name': filename, 'bounty': bounty, 'notice_type': 'wanted' })
 			req.onreadystatechange = (function () {
 				if (req.readyState === 4 && req.status === 200) {
 					var resp = req.responseText
 					console.log(resp)
-					if(resp == 'uploaded notice')
-					upload_cases()
+					if (resp == 'uploaded notice')
+						upload_cases()
 					else
-					alert("Upload failed")
+						alert("Upload failed")
 				}
 			})
 			console.log(data)
@@ -434,41 +448,41 @@
 		}
 	</script>
 
-<script>
-	function emergency() {
-		// window.location.href = 'http://localhost:8080/emergency'
-		request('GET', 'http://localhost:8080/emergency_admin').then(function (res) {
-			// document.body(res)
-			document.open()
-			document.write(res.body)
-			document.close()
-		})
-	}
+	<script>
+		function emergency() {
+			// window.location.href = 'http://localhost:8080/emergency'
+			request('GET', 'http://localhost:8080/emergency_admin').then(function (res) {
+				// document.body(res)
+				document.open()
+				document.write(res.body)
+				document.close()
+			})
+		}
 
-	function index() {
-		// window.location.href = 'http://localhost:8080/emergency'
-		request('GET', 'http://localhost:8080/index_admin').then(function (res) {
-			// document.body(res)
-			document.open()
-			document.write(res.body)
-			document.close()
-		})
-	}
+		function index() {
+			// window.location.href = 'http://localhost:8080/emergency'
+			request('GET', 'http://localhost:8080/index_admin').then(function (res) {
+				// document.body(res)
+				document.open()
+				document.write(res.body)
+				document.close()
+			})
+		}
 
-	function upload_cases() {
-		// window.location.href = 'http://localhost:8080/emergency'
-		request('GET', 'http://localhost:8080/upload_cases').then(function (res) {
-			// document.body(res)
-			document.open()
-			document.write(res.body)
-			document.close()
-		})
-	}
+		function upload_cases() {
+			// window.location.href = 'http://localhost:8080/emergency'
+			request('GET', 'http://localhost:8080/upload_cases').then(function (res) {
+				// document.body(res)
+				document.open()
+				document.write(res.body)
+				document.close()
+			})
+		}
 
-	function logout(){
-            window.location.href = "http://localhost:8080/index"
-        }
-</script>
+		function logout() {
+			window.location.href = "http://localhost:8080/index"
+		}
+	</script>
 
 </body>
 
