--- a/views/index.html
+++ b/views/index.html
@@ -872,8 +872,10 @@
             var url = "http://localhost:8080/login_submit";
             xhr.open("POST", url, true);
             xhr.setRequestHeader("Content-Type", "application/json");
+            // xhr.setRequestHeader("Access-Control-Allow-Headers","*");
             xhr.onreadystatechange = function () {
                 if (xhr.readyState === 4 && xhr.status === 200) {
+                    console.log('Full resp:'+xhr)
                     var resp = xhr.responseText;
                     console.log(resp)
                     if (resp == "wrong password") {
